# ferrite

./: .codecov.yml  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  clippy.toml  deny.toml  tempo.config.ts
.config/: nextest.toml
.github/: dependabot.yml  release-please-config.json
.github/workflows/: check.yml  coverage.yml  release-please.yml  release.yml  security.yml
benches/: alloc.rs  instructions.rs  patterns.rs  simd.rs
benches/common/: mod.rs
docs/: ARCHITECTURE.md  COVERAGE.md  VOCABULARY.md
src/: alloc.rs  cli.rs  coverage.rs  devmem.rs  devmem_run.rs  dimm.rs  edac.rs  error_analysis.rs  events.rs  failure.rs  gap.rs  headless.rs  lib.rs  log_bridge.rs  main.rs  ndjson.rs  output.rs  pattern.rs  pause.rs  phys.rs  results.rs  runner.rs  shutdown.rs  sieve.rs  simd.rs  smbios.rs  stability.rs  sysmem.rs  units.rs
src/ops/: avx512.rs  mod.rs  scalar.rs
src/pattern/: checkerboard.rs  march.rs  metadata.rs  mod.rs  moving_inversions.rs  random.rs  solid.rs  stuck_address.rs  walking.rs
src/physmem/: coverage.rs  devmem.rs  gap.rs  kpageflags.rs  lifecycle.rs  mod.rs  pfn.rs  phys.rs  sieve.rs  sysmem.rs
src/results/: fixtures.rs  mod.rs  render.rs
src/tui/: activity.rs  bridge.rs  event.rs  mod.rs  palette.rs  render.rs  run.rs  segment.rs  trace.rs
