[package]
name = "ferrite"
version = "0.1.1"
edition = "2024"
rust-version = "1.89"

[profile.release]
codegen-units = 1
opt-level = 3

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:tracing", "dep:tracing-subscriber", "dep:ansi-to-tui"]

[dependencies]
ansi-to-tui = { version = "8.0.1", optional = true }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = { version = "0.29.0", optional = true }
indicatif = "0.18.4"
nix = { version = "0.31.2", features = ["mman", "process", "resource", "user"] }
owo-colors = "4.3.0"
ratatui = { version = "0.30.0", features = ["scrolling-regions"], optional = true }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["json"], optional = true }
