[package]
name = "ferrite"
version = "0.1.4"
edition = "2024"

[profile.release]
codegen-units = 1
opt-level = 3

# Full optimization + debug symbols for perf/flamegraph. lto=false keeps build
# times reasonable; strip="none" ensures symbols survive to the profiler.
[profile.profiling]
inherits = "release"
debug = true
strip = "none"
lto = false

# Maximizes codegen-unit parallelism for the many small rebuilds cargo-mutants
# requires. Disabling incremental and debug info keeps each build lean.
[profile.mutant]
inherits = "dev"
incremental = false
debug = 0
codegen-units = 256

[features]
default = ["tui"]
bench = []
tui = ["dep:ratatui", "dep:crossterm", "dep:ansi-to-tui"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Memory address arithmetic intentionally truncates usize → smaller types and
# uses unsigned↔signed casts for page-math, physical-address resolution, etc.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"

# Progress bars, throughput display, and histogram buckets cast u64/usize → f64.
# Precision loss beyond 2^52 is irrelevant for display-only values.
cast_precision_loss = "allow"

# SIMD intrinsics require casting *mut u64 → *mut __m512i with stricter alignment.
# Alignment is guaranteed by the mmap allocation (page-aligned). Scoped to simd.rs.
# cast_ptr_alignment = "allow"

# Pre-1.0 API surface — doc sections for every fallible fn are enforced but
# may be relaxed again if the churn outweighs the benefit.
# missing_errors_doc = "allow"

# Prefer #[inline] over #[inline(always)] — let the compiler decide; benchmark before allowing/using inline(always).
inline_always = "deny"
used_underscore_binding = "deny"
pub_underscore_fields = "deny"

[dependencies]
ansi-to-tui = { version = "8.0.1", optional = true }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossterm = { version = "0.29.0", optional = true }
jiff = { version = "0.2.23", features = ["serde"] }
nix = { version = "0.31.2", features = ["mman", "process", "resource", "user"] }
owo-colors = "4.3.0"
ratatui = { version = "0.30.0", features = ["scrolling-regions"], optional = true }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
signal-hook = "0.4.4"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
assert2 = "0.4.0"
divan = "0.1.21"
gungraun = "0.18.1"
proptest = "1"
rstest = "0.26.1"
serial_test = "3.4.0"
tempfile = "3.27.0"

[[bench]]
name = "patterns"
harness = false

[[bench]]
name = "alloc"
harness = false

[[bench]]
name = "simd"
harness = false
required-features = ["bench"]

[[bench]]
name = "instructions"
harness = false
required-features = ["bench"]
